Parem de fumar!

--- a/dashboard.html
+++ b/dashboard.html
@@ -149,7 +149,7 @@
                 </div>
 
                 <!-- Lista de funcionários -->
-                <div class="FuncionariosLista" id="FuncionariosLista">
+                <div class="GradeLista" id="FuncionariosLista">
 
                 </div>
 
@@ -176,6 +176,11 @@
 
                     <!-- Adicionar -->
                     <button class="BotaoPrimario" id="BotaoAdicionarProdutos">Adicionar produto</button>
+
+                </div>
+
+                <!-- Lista de produtos -->
+                <div class="GradeLista" id="ProdutosLista">
 
                 </div>
 
