Correções de tamanho e etc

--- a/dashboard.html
+++ b/dashboard.html
@@ -215,10 +215,10 @@
                     <h2>Adicionar funcionário</h2>
                     <form id="AdicionarFuncionario">
                         
-                        <label for="NomeAF">Nome</label><br>
+                        <label for="NomeAF">Nome</label>
                         <input class="FormularioCampoPrimario" type="text" id="NomeAF" name="nome" placeholder="Ovídio Antoninho Marques" required><br>
 
-                        <label for="FuncaoAF">Função</label><br>
+                        <label for="FuncaoAF">Função</label>
                         <input class="FormularioCampoPrimario" type="text" id="FuncaoAF" name="funcao" placeholder="Vendedor" required><br>
 
 
@@ -236,10 +236,10 @@
                     <h2>Adicionar produto</h2>
                     <form id="AdicionarProduto">
                         
-                        <label for="NomeAP">Nome</label><br>
+                        <label for="NomeAP">Nome</label>
                         <input class="FormularioCampoPrimario" type="text" id="NomeAP" name="nome" placeholder="Fotografia" required><br>
 
-                        <label for="ValorAP">Valor (em R$)</label><br>
+                        <label for="ValorAP">Valor (em R$)</label>
                         <input class="FormularioCampoPrimario" type="number" id="ValorAP" name="valor" placeholder="5" required><br>
 
                     </form>
