--- a/dashboard.html
+++ b/dashboard.html
@@ -216,10 +216,10 @@
                     <form id="AdicionarFuncionario">
                         
                         <label for="NomeAF">Nome</label>
-                        <input class="FormularioCampoPrimario" type="text" id="NomeAF" name="nome" placeholder="Ovídio Antoninho Marques" required><br>
+                        <input class="FormularioCampoPrimario" type="text" id="NomeAF" name="nome" placeholder="Ovídio Antoninho Marques" required>
 
                         <label for="FuncaoAF">Função</label>
-                        <input class="FormularioCampoPrimario" type="text" id="FuncaoAF" name="funcao" placeholder="Vendedor" required><br>
+                        <input class="FormularioCampoPrimario" type="text" id="FuncaoAF" name="funcao" placeholder="Vendedor" required>
 
 
                     </form>
@@ -237,10 +237,10 @@
                     <form id="AdicionarProduto">
                         
                         <label for="NomeAP">Nome</label>
-                        <input class="FormularioCampoPrimario" type="text" id="NomeAP" name="nome" placeholder="Fotografia" required><br>
+                        <input class="FormularioCampoPrimario" type="text" id="NomeAP" name="nome" placeholder="Fotografia" required>
 
                         <label for="ValorAP">Valor (em R$)</label>
-                        <input class="FormularioCampoPrimario" type="number" id="ValorAP" name="valor" placeholder="5" required><br>
+                        <input class="FormularioCampoPrimario" type="number" id="ValorAP" name="valor" placeholder="5" required>
 
                     </form>
                     <div class="DashboardFormularioFooter">
