--- a/dashboard.html
+++ b/dashboard.html
@@ -224,7 +224,7 @@
 
                     </form>
                     <div class="DashboardFormularioFooter">
-                        <button id="CancelarFuncionarioBotao" class="BotaoSecundario">Cancelar</button>
+                        <input type="reset" id="CancelarFuncionarioBotao" class="BotaoSecundario">Cancelar</button>
                         <button id="AdicionarFuncionarioBotao" class="BotaoPrimario">Confirmar</button>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
 
                     </form>
                     <div class="DashboardFormularioFooter">
-                        <button id="CancelarProdutoBotao" class="BotaoSecundario">Cancelar</button>
+                        <input type="reset" id="CancelarProdutoBotao" class="BotaoSecundario">Cancelar</button>
                         <button id="AdicionarProdutoBotao" class="BotaoPrimario">Adicionar</button>
                     </div>
                 </div>
