--- a/dashboard.html
+++ b/dashboard.html
@@ -225,7 +225,7 @@
                     </form>
                     <div class="DashboardFormularioFooter">
                         <input type="reset" id="CancelarFuncionarioBotao" class="BotaoSecundario" value="Cancelar">
-                        <button id="AdicionarFuncionarioBotao" class="BotaoPrimario">Confirmar</button>
+                        <button id="AdicionarFuncionarioBotao" class="BotaoPrimario">Adicionar</button>
                     </div>
                 </div>
             </div>
