--- a/dashboard.html
+++ b/dashboard.html
@@ -174,9 +174,10 @@
                                 }
 
                                 // Código específico
-                                Array.from(data.funcionarios).forEach(element => {
+                                /*Array.from(data.funcionarios).forEach(element => {
                                     document.write(element)
-                                });
+                                });*/
+                                document.write(data.funcionarios)
                                 
 
                             } catch (error) {
