--- a/dashboard.html
+++ b/dashboard.html
@@ -158,7 +158,7 @@
                             try {
                                 // Comunicação com o backend
                                 const response = await fetch('https://evolved-legible-spider.ngrok-free.app/obter-funcionarios', {
-                                    method: 'GET',
+                                    method: 'POST',
                                     headers: {
                                         'Content-Type': 'application/json'
                                     },
