--- a/dashboard.html
+++ b/dashboard.html
@@ -150,7 +150,9 @@
 
                 <!-- Lista de funcionários -->
                 <div class="GradeLista" id="FuncionariosLista">
-
+                    <script>
+                        obterFuncionarios();
+                    </script>
                 </div>
 
             </div>
