Criar conta de funcionário

--- a/dashboard.html
+++ b/dashboard.html
@@ -211,7 +211,7 @@
             <!-- Formulário de adição de funcionário -->
             <div id="DashboardFormularioFuncionario" class="DashboardFormulario">
                 <div class="DashboardFormularioConteudo">
-                    <h2>Adicionar funcionário</h2>
+                    <h2>Criar conta de funcionário</h2>
                     <form id="AdicionarFuncionario">
                         
                         <label for="NomeAF">Nome</label>
@@ -219,6 +219,12 @@
 
                         <label for="FuncaoAF">Função</label>
                         <input class="FormularioCampoPrimario" type="text" id="FuncaoAF" name="funcao" placeholder="Vendedor" required>
+
+                        <label for="EmailAF">E-mail</label>
+                        <input class="FormularioCampoPrimario" type="text" id="EmailAF" name="email" placeholder="vendedor@email.com" required>
+
+                        <label for="SenhaAF">Senha</label>
+                        <input class="FormularioCampoPrimario" type="text" id="SenhaAF" name="senha" placeholder="1234" required>
 
 
                     </form>
