--- a/dashboard.html
+++ b/dashboard.html
@@ -229,8 +229,8 @@
 
                     </form>
                     <div class="DashboardFormularioFooter">
-                        <input type="reset" id="CancelarFuncionarioBotao" class="BotaoSecundario" value="Cancelar">
-                        <button id="AdicionarFuncionarioBotao" class="BotaoPrimario">Adicionar</button>
+                        <input type="reset" form="AdicionarFuncionario" id="CancelarFuncionarioBotao" class="BotaoSecundario" value="Cancelar">
+                        <input type="submit" form="AdicionarFuncionario" id="AdicionarFuncionarioBotao" class="BotaoPrimario" value="Adicionar">
                     </div>
                 </div>
             </div>
