--- a/dashboard.html
+++ b/dashboard.html
@@ -80,6 +80,11 @@
 
                 </ul>
 
+                <!-- Botão de abrir -->
+                <button id="BotaoBarraLateralAbrir">
+                    <i id="BotaoBarraLateralAbrirIcone" class="fa-solid fa-chevron-right">
+                </button>
+
             </div>
 
             <!-- Conteúdo inferior -->
