--- a/dashboard.html
+++ b/dashboard.html
@@ -82,7 +82,7 @@
 
                 <!-- Botão de abrir -->
                 <button id="BotaoBarraLateralAbrir">
-                    <i id="BotaoBarraLateralAbrirIcone" class="fa-solid fa-chevron-right">
+                    <i id="BotaoBarraLateralAbrirIcone" class="fa-solid fa-chevron-right"></i>
                 </button>
 
             </div>
