--- a/logon.html
+++ b/logon.html
@@ -49,7 +49,8 @@
                         <input class="FormularioCampoPrimario" type="password" id="SenhaR" name="senha" placeholder="****" required>
                         <button class="ExibirSenha" id="ExibirSenhaR" type="button"><i class="fa-solid fa-eye"></i></button><br>
 
-                        <input type="hidden" name="tipo" value="cadastro">
+                        <input type="hidden" name="tipo" value="empresarial">
+
                         <div class="LogOptionBotoes">
                             <button class="BotaoSecundario" type="reset">Limpar dados</button>
                             <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
