--- a/verify.html
+++ b/verify.html
@@ -9,7 +9,35 @@
 
         <title>Verificação de email</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
+
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        <script type="text/javascript">
+            (function() {
+                // https://dashboard.emailjs.com/admin/account
+                emailjs.init({
+                    publicKey: "8aKoHvVdxMzLMZv2B",
+                });
+            })();
+
+            var templateParams = {
+                subject: 'James',
+                message: 'Check this out!',
+                email: 'renato.santos36@aluno.educa.go.gov.br',
+                name: 'Business PRO'
+            };
+
+            emailjs.send('service_mr1z653', 'template_8qj7bar', templateParams).then(
+                (response) => {
+                    console.log('SUCCESS!', response.status, response.text);
+                },
+                (error) => {
+                    console.log('FAILED...', error);
+                },
+            );
+        </script>
+
     </head>
+
     <body>
 
         <!-- Corpo -->
