--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,9 @@
 
         <title>Painel de controle</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
+
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        
     </head>
     <body id="BodyDashboard">
 
