--- a/logon.html
+++ b/logon.html
@@ -9,6 +9,9 @@
 
         <title>Cadastro e entrada</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
+
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        
     </head>
     <body>
 
