--- a/verify.html
+++ b/verify.html
@@ -18,7 +18,16 @@
 
         <!-- Corpo -->
         <main>
-            Em breve!!!
+            
+            <!-- Caixa de verificação -->
+            <div class="CaixaVerificarEmail">
+                <p id="CaixaVerificarEmailLabel">Enviamos um código de verificação por email para . Insira-o para verificar seu email e criar sua conta empresarial.</p>
+                <form>
+                    <label for="CodigoVerificacao">Código de verificação</label>
+                    <input id="CodigoVerificacao" name="codigo" placeholder="******" class="FormularioCampoPrimario">
+                </form>
+            </div>
+
         </main>
 
         <!-- Javascript-->
