Botão de enviar código para melhor acessibilidade

--- a/verify.html
+++ b/verify.html
@@ -24,7 +24,10 @@
                 <p id="CaixaVerificarEmailTexto">Enviamos um código de verificação por email para . Insira-o para verificar seu email e criar sua conta empresarial.</p>
                 <form id="FormularioVerificarEmail">
                     <label for="CodigoVerificacao">Código de verificação</label>
-                    <input type="text" id="CodigoVerificacao" name="codigo" placeholder="******" class="FormularioCampoPrimario">
+                    <div>
+                        <input type="text" id="CodigoVerificacao" name="codigo" placeholder="******" class="FormularioCampoPrimario">
+                        <button class="BotaoPrimario" type="submit"><i class="fa-solid fa-paper-plane"></i></button>
+                    </div>
                 </form>
             </div>
 
