Página inicial CSS e página de Download

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <a href="index"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
                 <ul class="Lista">
+                    <li><a href="download" class="BotaoSecundario">Baixar aplicativo</a></li>
                     <script>
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
                             document.write(`<li><a href="dashboard" class="BotaoSecundario">Painel de controle</a></li>`);
@@ -38,11 +39,37 @@
         </header>
 
         <!-- Corpo -->
-        <main>
-            O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
-            Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
-            Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
-            empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
+        <main class="CorpoPaginaInicial">
+            <section>
+                <p>
+                    O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
+                    <br>Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
+                    <br>Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
+                    <br>empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
+                </p>
+            </section>
+            <section>
+                <p>
+                    O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
+                    <br>Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
+                    <br>Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
+                    <br>empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
+                </p>
+                <div>
+                    <p>Verdade</p>
+                </div>
+            </section>
+            <section>
+                <div>
+                    <p>Verdade</p>
+                </div>
+                <p>
+                    O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
+                    <br>Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
+                    <br>Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
+                    <br>empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
+                </p>
+            </section>
         </main>
 
         <!-- Javascript-->
