--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
             <section>
                 <p>
                     O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
-                    <br>Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
-                    <br>Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
-                    <br>empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
+                    Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
+                    Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
+                    empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
                 </p>
             </section>
             <section>
                 <p>
                     O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
-                    <br>Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
-                    <br>Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
-                    <br>empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
+                    Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
+                    Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
+                    empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
                 </p>
                 <div>
                     <p>Verdade</p>
@@ -65,9 +65,9 @@
                 </div>
                 <p>
                     O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
-                    <br>Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
-                    <br>Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
-                    <br>empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
+                    Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
+                    Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
+                    empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
                 </p>
             </section>
         </main>
