Correção do href="index" para href="."

--- a/download.html
+++ b/download.html
@@ -20,10 +20,10 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <a href="index"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
+                    <a href="."><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
                 <ul class="Lista">
-                    <li><a href="index" class="BotaoSecundario">Página inicial</a></li>
+                    <li><a href="." class="BotaoSecundario">Página inicial</a></li>
                     <script>
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
                             document.write(`<li><a href="dashboard" class="BotaoSecundario">Painel de controle</a></li>`);
