--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <a href="index"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
+                    <a href="."><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
                 <ul class="Lista">
                     <li><a href="download" class="BotaoSecundario">Baixar aplicativo</a></li>
