Site pesquisável no Google

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 
         <link rel="stylesheet" href="css/style.css">
 
+        <meta name="description" content="Gerencie sua empresa de forma eletrônica, gratuita e eficiente com o Business PRO.">
+        <meta name="keywords" content="business, pro, projeto, curso, renato, ovidio">
+        <meta name="author" content="Renato Augusto">
+        
         <title>Business PRO</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
 
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-
+        
     </head>
     <body>
 
