Página de download

--- a/download.html
+++ b/download.html
@@ -38,8 +38,19 @@
         </header>
 
         <!-- Corpo -->
-        <main>
-            Em breve: Área de download do Business PRO
+        <main class="CorpoPaginaDownload">
+            <p>Escolha sua plataforma preferida</p>
+            <div>
+                <a href=".">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg">
+                </a>
+                <a href=".">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Android_robot.svg/1745px-Android_robot.svg.png">
+                </a>
+                <a href=".">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/800px-Tux.svg.png">
+                </a>
+            </div>
         </main>
 
         <!-- Javascript-->
