--- a/download.html
+++ b/download.html
@@ -41,13 +41,13 @@
         <main class="CorpoPaginaDownload">
             <p>Escolha sua plataforma preferida</p>
             <div>
-                <a href=".">
+                <a href="./files/aindanao.txt">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg">
                 </a>
-                <a href=".">
+                <a href="./files/aindanao.txt">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Android_robot.svg/1745px-Android_robot.svg.png">
                 </a>
-                <a href=".">
+                <a href="./files/aindanao.txt">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/800px-Tux.svg.png">
                 </a>
             </div>
