--- a/download.html
+++ b/download.html
@@ -41,7 +41,7 @@
         <main class="CorpoPaginaDownload">
             <p>Escolha sua plataforma preferida</p>
             <div>
-                <a href="./files/aindanao.zip" target="_blank">
+                <a href="./files/business-pro portable for windows.zip" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg">
                 </a>
                 <a href="./files/aindanao.zip" target="_blank">
