--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
                     <a href="."><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
                 <ul class="Lista">
-                    <li><a href="download" class="BotaoSecundario">Baixar aplicativo</a></li>
                     <script>
+                        if(window.process == undefined) {
+                            document.write(`<li><a href="download" class="BotaoPrimario">Baixar aplicativo</a></li>`);
+                        };
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
                             document.write(`<li><a href="dashboard" class="BotaoSecundario">Painel de controle</a></li>`);
                             document.write(`<li><button class="BotaoPrimario" onclick="UsuarioSair()">Sair</button></li>`);
                         } else {
                             document.write(`<li><a href="logon"><button class="BotaoPrimario">Começar!</button></a></li>`);
-                        }
+                        };
                     </script>
                 </ul>
                 <div class="MenuIcone">
