--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <a href="."><img src="img/BusinessPro.png" width="46px" height="46px"></a>
+                    <p style="font-weight: 400;">Business</p>
+                    <p style="font-weight: 700;">PRO</p>
                 </div>
                 <ul class="Lista">
                     <script>
