--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <ul class="Lista">
                     <script>
                         if(window.process == undefined) {
-                            document.write(`<li><a href="download" class="BotaoPrimario">Baixar aplicativo</a></li>`);
+                            document.write(`<li><a href="download" class="BotaoSecundario">Baixar aplicativo</a></li>`);
                         };
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
                             document.write(`<li><a href="dashboard" class="BotaoSecundario">Painel de controle</a></li>`);
-                            document.write(`<li><button class="BotaoPrimario" onclick="UsuarioSair()">Sair</button></li>`);
+                            document.write(`<li><button class="BotaoSecundario" onclick="UsuarioSair()">Sair</button></li>`);
                         } else {
                             document.write(`<li><a href="logon"><button class="BotaoPrimario">Começar!</button></a></li>`);
                         };
