--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <p style="font-weight: 400;">Business</p>
-                    <p style="font-weight: 700;">PRO</p>
+                    <a href=".">
+                        <p style="font-weight: 400;">Business</p>
+                        <p style="font-weight: 700;">PRO</p>
+                    </a>
                 </div>
                 <ul class="Lista">
                     <script>
