--- a/download.html
+++ b/download.html
@@ -18,7 +18,10 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <a href="."><img src="img/BusinessPro.png" width="46px" height="46px"></a>
+                    <a href=".">
+                        <p style="font-weight: 400;">Business</p>
+                        <p style="font-weight: 700;">PRO</p>
+                    </a>
                 </div>
                 <ul class="Lista">
                     <li><a href="." class="BotaoSecundario">Página inicial</a></li>
