--- a/logon.html
+++ b/logon.html
@@ -17,7 +17,10 @@
         <header>
             <nav>
                 <div class="Logo">
-                    <a href="."><img src="img/BusinessPro.png" width="46px" height="46px"></a>
+                    <a href=".">
+                        <p style="font-weight: 400;">Business</p>
+                        <p style="font-weight: 700;">PRO</p>
+                    </a>
                 </div>
             </nav>
         </header>
