--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav>
                 <div class="Logo">
                     <a href=".">
-                        <p style="font-weight: 400;">Business</p>
+                        <p style="font-weight: 400;">Aline</p>
                         <p style="font-weight: 700;">PRO</p>
                     </a>
                 </div>
