--- a/index.html
+++ b/index.html
@@ -48,12 +48,17 @@
         <!-- Corpo -->
         <main class="CorpoPaginaInicial">
             <section>
-                <p>
-                    O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
-                    Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
-                    Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
-                    empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
-                </p>
+                <div>
+                    <h1 style="
+                /* border-left: 5px blue; */
+                /* display: inline-block; */
+                border-left: 4px solid blue;
+            ">O que é o Business PRO?</h1>
+                    <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
+                </div>
+                <div>
+                    <img src="https://static.vecteezy.com/system/resources/previews/024/558/280/non_2x/businessman-isolated-illustration-ai-generative-free-png.png">
+                </div>
             </section>
             <section>
                 <p>
