--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
                 </div>
                 <div>
-                    <img src="https://static.vecteezy.com/system/resources/previews/024/558/280/non_2x/businessman-isolated-illustration-ai-generative-free-png.png">
+                    <img src="img/EmpresariosFoto.png">
                 </div>
             </section>
             <section>
