--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
                 </div>
                 <div>
-                    <img src="img/EmpresariosFoto.png">
+                    <img src="img/EmpresariosFoto.png" height="300" > 
                 </div>
             </section>
             <section>
