--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
         <!-- Corpo -->
         <main class="CorpoPaginaInicial">
             <section>
-                <div>
+                <div style="font-size: x-large;">
                     <h1 style="
-                /* border-left: 5px blue; */
-                /* display: inline-block; */
-                border-left: 4px solid blue;
-            ">O que é o Business PRO?</h1>
-                    <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
+                        border-left: 5px solid #2b4d80;
+                        padding-left: 10px;
+                    ">O que é o Business PRO?</h1>
+                    <p>O Business PRO é uma solução digital desenvolvida especialmente para você que<br>está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
                 </div>
                 <div>
                     <img src="img/EmpresariosFoto.png" height="500" > 
