aline ca ida cadeira

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p>O Business PRO é uma solução digital desenvolvida especialmente para você que<br>está buscando otimizar a gestão de seus negócios de<br>maneira simples e eficiente.</p>
                 </div>
                 <div>
-                    <img src="img/EmpresariosFoto.png" height="500" aling="right" alt="Imagem de Empresários"> 
+                    <img src="img/EmpresariosFoto.png" height="500" > 
                 </div>
             </section>
             <section>
