--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="Logo">
                     <a href=".">
                         <p style="font-weight: 400;">Business</p>
-                        <p style="font-weight: 700;">PRO</p>
+                        <p style="font-weight: 700;">PRO2</p>
                     </a>
                 </div>
                 <ul class="Lista">
