--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="Logo">
                     <a href=".">
                         <p style="font-weight: 400;">Business</p>
-                        <p style="font-weight: 700;">PRO2</p>
+                        <p style="font-weight: 700;">PRO X</p>
                     </a>
                 </div>
                 <ul class="Lista">
@@ -48,12 +48,11 @@
         <!-- Corpo -->
         <main class="CorpoPaginaInicial">
             <section>
-                <div style="font-size: x-large;">
-                    <h1 style="
-                        border-left: 5px solid #2b4d80;
-                        padding-left: 10px;
-                    ">O que é o<br>Business PRO?</h1>
-                    <p>O Business PRO é uma solução digital desenvolvida especialmente para você que<br>está buscando otimizar a gestão de seus negócios de<br>maneira simples e eficiente.</p>
+                <div style="font-size: x-large; gap: 10px;">
+                    <h1 style="border-left: 5px solid #2b4d80; padding-left: 10px;">
+                        O que é o<br>Business PRO?
+                    </h1>
+                    <p style="text-align: justify;">O Business PRO é uma solução digital desenvolvida especialmente para você que<br>está buscando otimizar a gestão de seus negócios de<br>maneira simples e eficiente.</p>
                 </div>
                 <div>
                     <img src="img/EmpresariosFoto.png" height="500" > 
