Alinhamento do texto

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                     <h1 style="border-left: 5px solid #2b4d80; padding-left: 10px;">
                         O que é o<br>Business PRO?
                     </h1>
-                    <p style="text-align: justify;">O Business PRO é uma solução digital desenvolvida especialmente para você que<br>está buscando otimizar a gestão de seus negócios de<br>maneira simples e eficiente.</p>
+                    <p style="text-align: justify;">
+                        O Business PRO é uma solução digital desenvolvida especialmente para você que<br>
+                        está buscando otimizar a gestão de seus negócios de<br>
+                        maneira simples e eficiente.
+                    </p>
                 </div>
                 <div>
                     <img src="img/EmpresariosFoto.png" height="500" > 
