--- a/index.html
+++ b/index.html
@@ -52,20 +52,16 @@
                     <h1 style="
                         border-left: 5px solid #2b4d80;
                         padding-left: 10px;
-                    ">O que é o<br>Business PRO?</h1>
-                    <p>O Business PRO é uma solução digital desenvolvida especialmente para você que<br>está buscando otimizar a gestão de seus negócios de<br>maneira simples e eficiente.</p>
+                    ">O que é o<br>Business PRO?</h1><br>
+                    <p>O Business PRO é uma solução digital desenvolvida<br> especialmente para você que está buscando otimizar<br> a gestão de seus negócios de maneira simples e eficiente.</p>
                 </div>
                 <div>
                     <img src="img/EmpresariosFoto.png" height="500" > 
                 </div>
             </section>
-            <section>
-                <p>
-                    O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
-                    Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
-                    Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
-                    empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
-                </p>
+            <section style="background-color:black;">
+
+                <img src="img/0930.jpg" height="500">
                 <div>
                     <p>Verdade</p>
                 </div>
