Aline cala boca 2

--- a/index.html
+++ b/index.html
@@ -59,13 +59,18 @@
                     <img src="img/EmpresariosFoto.png" height="500" > 
                 </div>
             </section>
+
             <section style="background-color:black;">
 
-                <img src="img/0930.jpg" height="500">
                 <div>
-                    <p>Verdade</p>
+                    <p style="color: white; font-size: 50px;">O controle do seu negócio na palma da mão.</p>
                 </div>
+                <div>
+                    <img src="img/Smartphone.png" height="500">
+                </div>
+
             </section>
+
             <section>
                 <div>
                     <p>Verdade</p>
