--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/index.css">
 
         <meta name="description" content="Gerencie sua empresa de forma eletrônica, gratuita e eficiente com o Business PRO.">
         <meta name="keywords" content="business, pro, projeto, curso, renato, ovidio">
