--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/dashboard.css">
 
         <title>Painel de controle</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
@@ -126,7 +126,6 @@
                 
                 <h1>Início</h1>
                 <p>Conteúdo da página</p>
-                <p>Aline feia</p>
 
             </div>
 
