--- a/verify.html
+++ b/verify.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/verify.css">
 
         <title>Verificação de email</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
