--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
                 <ul class="Lista">
                     <script>
                         if(window.process == undefined) {
-                            document.write(`<li><a href="download" class="BotaoSecundario">Baixar aplicativo</a></li>`);
+                            document.write(`<li><a href="download" class="BotaoTerciario">Baixar aplicativo</a></li>`);
                         };
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
-                            document.write(`<li><a href="dashboard" class="BotaoSecundario">Painel de controle</a></li>`);
-                            document.write(`<li><button class="BotaoSecundario" onclick="UsuarioSair()">Sair</button></li>`);
+                            document.write(`<li><a href="dashboard" class="BotaoTerciario">Painel de controle</a></li>`);
+                            document.write(`<li><button class="BotaoTerciario" onclick="UsuarioSair()">Sair</button></li>`);
                         } else {
-                            document.write(`<li><a href="logon"><button class="BotaoPrimario">Começar!</button></a></li>`);
+                            document.write(`<li><a href="logon"><button class="BotaoSecundario">Começar!</button></a></li>`);
                         };
                     </script>
                 </ul>
                 <div class="MenuIcone">
-                    <button class="BotaoSecundario" id="MenuIcone"><i class="fa-solid fa-bars"></i></button>
+                    <button class="BotaoTerciario" id="MenuIcone"><i class="fa-solid fa-bars"></i></button>
                 </div>
             </nav>
         </header>
@@ -50,10 +50,10 @@
             <section>
                 <div style="font-size: x-large;">
                     <h1 style="
-                        border-left: 5px solid #2b4d80;
+                        border-left: 5px solid var(--cor-de-destaque);
                         padding-left: 10px;
-                    ">O que é o<br>Business PRO?</h1><br>
-                    <p>O Business PRO é uma solução digital desenvolvida<br> especialmente para você que está buscando otimizar<br> a gestão de seus negócios de maneira simples e eficiente.</p>
+                    ">O que é o Business PRO?</h1><br>
+                    <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
                 </div>
                 <div>
                     <img src="img/EmpresariosFoto.png" height="500" > 
@@ -71,17 +71,6 @@
 
             </section>
 
-            <section>
-                <div>
-                    <p>Verdade</p>
-                </div>
-                <p>
-                    O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
-                    Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
-                    Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
-                    empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
-                </p>
-            </section>
         </main>
 
         <!-- Javascript-->
