--- a/logon.html
+++ b/logon.html
@@ -56,7 +56,7 @@
                         <input type="hidden" name="tipo" value="empresarial">
 
                         <div class="LogOptionBotoes">
-                            <button class="BotaoSecundario" type="reset">Limpar dados</button>
+                            <button class="BotaoTerciario" type="reset">Limpar dados</button>
                             <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
                         </div>
                     </form>
@@ -75,7 +75,7 @@
 
                         <input type="hidden" name="tipo" value="login">
                         <div class="LogOptionBotoes">
-                            <button class="BotaoSecundario" id="BotaoEsqueciMinhaSenha" type="button">Esqueci minha senha</button>
+                            <button class="BotaoTerciario" id="BotaoEsqueciMinhaSenha" type="button">Esqueci minha senha</button>
                             <button class="BotaoPrimario" type="submit">Entrar</button>
                         </div>
                     </form>
