--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="keywords" content="business, pro, projeto, curso, renato, ovidio">
         <meta name="author" content="Renato Augusto">
         
-        <title>Business PRO</title>
+        <title>Business PRO X</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
 
     </head>
@@ -24,6 +24,7 @@
                     <a href=".">
                         <p style="font-weight: 400;">Business</p>
                         <p style="font-weight: 700;">PRO</p>
+                        <p style="font-weight: 1000;">X</p>
                     </a>
                 </div>
                 <ul class="Lista">
@@ -48,24 +49,12 @@
         <!-- Corpo -->
         <main class="CorpoPaginaInicial">
             <section>
-
                 <div style="font-size: x-large;">
                     <h1 style="
                         border-left: 5px solid var(--cor-de-destaque);
                         padding-left: 10px;
                     ">O que é o Business PRO?</h1><br>
                     <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
-
-                <div style="font-size: x-large; gap: 10px;">
-                    <h1 style="border-left: 5px solid #2b4d80; padding-left: 10px;">
-                        O que é o<br>Business PRO?
-                    </h1>
-                    <p style="text-align: justify;">
-                        O Business PRO é uma solução digital desenvolvida especialmente para você que<br>
-                        está buscando otimizar a gestão de seus negócios de<br>
-                        maneira simples e eficiente.
-                    </p>
-
                 </div>
                 <div>
                     <img src="img/EmpresariosFoto.png" height="500" > 
