aline aprende html e css Por favor

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     <h1 style="
                         border-left: 5px solid var(--cor-de-destaque);
                         padding-left: 10px;
-                    ">O que é o Business PRO?</h1><br>
+                        
+                    ">O que é o <br>Business PRO?</h1><br>
                     <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
                 </div>
                 <div>
