Classificação dos elementos do index

--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
 
         <!-- Corpo -->
         <main class="CorpoPaginaInicial">
-            <section>
-                <div style="font-size: x-large;">
-                    <h1 style="
-                        border-left: 5px solid var(--cor-de-destaque);
-                        padding-left: 10px;
-                    ">O que é o Business PRO?</h1><br>
+            <section class="Secao1">
+                <div>
+                    <h1>O que é o Business PRO?</h1><br>
                     <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
                 </div>
                 <div>
@@ -61,15 +58,13 @@
                 </div>
             </section>
 
-            <section style="background-color:black;">
-
+            <section class="Secao2">
                 <div>
-                    <p style="color: white; font-size: 50px;">O controle do seu negócio na palma da mão.</p>
+                    <p>O controle do seu negócio na palma da mão.</p>
                 </div>
                 <div>
                     <img src="img/Smartphone.png" height="500">
                 </div>
-
             </section>
 
         </main>
