--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <ul class="Lista">
                     <script>
-                        if(window.process == undefined) {
+                        if(UsandoElectron() == false) {
                             document.write(`<li><a href="download" class="BotaoTerciario">Baixar aplicativo</a></li>`);
                         };
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
