--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="keywords" content="business, pro, projeto, curso, renato, ovidio">
         <meta name="author" content="Renato Augusto">
         
-        <title>Business PRO X</title>
+        <title>Business PRO</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
 
     </head>
@@ -24,7 +24,6 @@
                     <a href=".">
                         <p style="font-weight: 400;">Business</p>
                         <p style="font-weight: 700;">PRO</p>
-                        <p style="font-weight: 1000;">X</p>
                     </a>
                 </div>
                 <ul class="Lista">
@@ -48,7 +47,7 @@
 
         <!-- Corpo -->
         <main class="CorpoPaginaInicial">
-            <section class="Secao1">
+            <section id="Secao1">
                 <div>
                     <h1>O que é o Business PRO?</h1><br>
                     <p>O Business PRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente.</p>
@@ -58,7 +57,7 @@
                 </div>
             </section>
 
-            <section class="Secao2">
+            <section id="Secao2">
                 <div>
                     <p>O controle do seu negócio na palma da mão.</p>
                 </div>
