--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,9 @@
     </head>
     <body id="BodyDashboard">
 
+        <!-- Javascript-->
+        <script src="js/preload.js"></script>
+
         <!-- Barra lateral -->
         <nav id="BarraLateral" class="BarraLateral">
 
