--- a/download.html
+++ b/download.html
@@ -14,6 +14,9 @@
 
     <body>
 
+        <!-- Javascript-->
+        <script src="js/preload.js"></script>
+
         <!-- Cabeçalho -->
         <header>
             <nav>
