--- a/logon.html
+++ b/logon.html
@@ -13,6 +13,9 @@
     </head>
     <body>
 
+        <!-- Javascript-->
+        <script src="js/preload.js"></script>
+
         <!-- Cabeçalho -->
         <header>
             <nav>
