--- a/workspace.html
+++ b/workspace.html
@@ -14,6 +14,9 @@
 
     <body>
 
+        <!-- Javascript-->
+        <script src="js/preload.js"></script>
+
         <!-- Corpo -->
         <main>
             Em breve: Área de trabalho para contas de funcionários.
