--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </head>
     <body>
 
+        <!-- Javascript-->
+        <script src="js/preload.js"></script>
+
         <!-- Cabeçalho -->
         <header>
             <nav>
