--- a/verify.html
+++ b/verify.html
@@ -14,6 +14,9 @@
 
     <body>
 
+        <!-- Javascript-->
+        <script src="js/preload.js"></script>
+
         <!-- Corpo -->
         <main>
             
