--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="keywords" content="business, pro, projeto, curso, renato, ovidio">
         <meta name="author" content="Renato Augusto">
         
-        <title>Business PRO</title>
+        <title>Business PROta</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
 
     </head>
