--- a/download.html
+++ b/download.html
@@ -31,14 +31,14 @@
                     <script>
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
                             document.write(`<li><a href="dashboard" class="BotaoTerciario">Painel de controle</a></li>`);
-                            document.write(`<li><button class="BotaoTerciario" onclick="UsuarioSair()">Sair</button></li>`);
+                            document.write(`<li><a class="BotaoTerciario" onclick="UsuarioSair()">Sair</a></li>`);
                         } else {
-                            document.write(`<li><a href="logon"><button class="BotaoSecundario">Começar!</button></a></li>`);
+                            document.write(`<li><a href="logon" class="BotaoSecundario">Começar!</a></li>`);
                         }
                     </script>
                 </ul>
                 <div class="MenuIcone">
-                    <button class="BotaoSecundario" id="MenuIcone"><i class="fa-solid fa-bars"></i></button>
+                    <button class="BotaoTerciario" id="MenuIcone"><i class="fa-solid fa-bars"></i></button>
                 </div>
             </nav>
         </header>
@@ -50,10 +50,10 @@
                 <a href="./files/business pro portable for windows.zip" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg">
                 </a>
-                <a href="./files/aindanao.zip" target="_blank">
+                <a onclick="Notificar('Em construção', 'Esse aplicativo ainda não foi desenvolvido', 'OK')">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Android_robot.svg/1745px-Android_robot.svg.png">
                 </a>
-                <a href="./files/aindanao.zip" target="_blank">
+                <a onclick="Notificar('Em construção', 'Esse aplicativo ainda não foi desenvolvido', 'OK')">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/800px-Tux.svg.png">
                 </a>
             </div>
