Melhoria no formulário da dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -237,7 +237,7 @@
 
                     </form>
                     <div class="DashboardFormularioFooter">
-                        <input type="reset" form="AdicionarFuncionario" id="CancelarFuncionarioBotao" class="BotaoSecundario" value="Cancelar">
+                        <input type="reset" form="AdicionarFuncionario" id="CancelarFuncionarioBotao" class="BotaoTerciario" value="Cancelar">
                         <input type="submit" form="AdicionarFuncionario" id="AdicionarFuncionarioBotao" class="BotaoPrimario" value="Adicionar">
                     </div>
                 </div>
@@ -257,7 +257,7 @@
 
                     </form>
                     <div class="DashboardFormularioFooter">
-                        <input type="reset" id="CancelarProdutoBotao" class="BotaoSecundario" value="Cancelar">
+                        <input type="reset" id="CancelarProdutoBotao" class="BotaoTerciario" value="Cancelar">
                         <button id="AdicionarProdutoBotao" class="BotaoPrimario">Adicionar</button>
                     </div>
                 </div>
