--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
     </head>
     <body>
 
+        <!--
+        
+        AFAZERES
+
+            FUNCIONARIOS
+            - editar funcionários
+            - botao pra mandar email pro funcionario
+            - excluir funcionarios
+            - colocar foto nos funcionarios
+
+            PRODUTOS
+            - adicionar produtos
+            - editar produtos
+            - excluir produtos
+
+            INICIO
+            - calendario de metas 
+            - adicionar metas
+            - excluir metas
+            - progresso e editar metas
+            - metas no banco de dados
+            - metas no dashboard
+
+            CONFIGURAÇÕES
+            - enviar foto da empresa
+            - editar nome da empresa
+            - editar email da empresa
+
+        -->
         <!-- Javascript-->
         <script src="js/preload.js"></script>
 
