Inteligência artificial mais bonitinha

--- a/dashboard.html
+++ b/dashboard.html
@@ -118,14 +118,15 @@
             <div class="CorpoAba" id="CorpoAbaInicio">
                 
                 <h1>Início</h1>
-                <p>Conteúdo da página</p>
 
-                <form id="GeminiFormulario" class="CabecalhoPequeno">
-                    <input type="search" id="PesquisarGemini" name="mensagem" class="FormularioCampoPrimario" placeholder="Que dia é hoje?">
-                    <input type="submit" class="BotaoPrimario" value="Perguntar">
-                </form>
+                <div class="InteligenciaArtificial">
+                    <form id="GeminiFormulario" class="CabecalhoPequeno">
+                        <input type="search" id="PesquisarGemini" name="mensagem" class="FormularioCampoPrimario" placeholder="Que dia é hoje?">
+                        <input type="submit" class="BotaoPrimario" value="Perguntar">
+                    </form>
 
-                <div id="GeminiResposta" class="GeminiResposta"></div>
+                    <div id="GeminiResposta" class="GeminiResposta"></div>
+                </div>
 
             </div>
 
